# blog-server

./: .gitignore  Cargo.toml  README.md  distr.conf
.github/workflows/: rust.yml
blog-server/: Cargo.toml
distr/: Cargo.toml
examples/: test_static_dir.rs
scripts/: kill.sh  restart.sh  start.sh
src/: lib.rs  main.rs  nginx.rs
static/: test.css
