[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"

[dependencies]

# acme-micro = "0.12"
clia-tracing-config = "0"
# distr = { git = "https://github.com/coca-labs/distr" }
# env_logger = "0.9"
# futures = "0.3"
# memoria = { git = "https://github.com/coca-labs/memoria" }
nginx-config = { package = "clia-nginx-config", version = "0.14" }
# ntex = { version = "1.0", features = ["tokio", "rustls"] }
#ntex-files = { package = "clia-ntex-files-mod", version = "0.3" }
# ntex-files = "0.4"
#ntex-session = { package = "clia-ntex-session", version = "0.3" }
# ntex-session = "0.4"
# openssl = "0.10"
# rustls = "0.21"
# rustls-pemfile = "1"
salvo = { version = "0", features = ["acme", "compression", "serve-static", "force-https"] }
serde = "1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.release]
panic = "abort"
